PR/53058: Nikhil Benesch: use correctly typed variables (wchar_t vs wint_t) as parameters.